<resources>
    <string name="app_name">[Task 07] Ejercicio GridLayout</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_x">×</string>
    <string name="_div">÷</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_igual">=</string>
    <string name="_menos">-</string>
    <string name="_punto">.</string>
    <string name="_mas">+</string>
</resources>
