<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:columnCount="4"
    android:rowCount="4"
    tools:context=".MainActivity"
    >

    <Button
        android:id="@+id/num_7"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/_7"


        />

    <Button
        android:id="@+id/num_8"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/_8" />

    <Button
        android:id="@+id/num_9"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="0"
        android:text="@string/_9" />

    <Button
        android:id="@+id/num_4"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/_4" />

    <Button
        android:id="@+id/num_5"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/_5" />

    <Button
        android:id="@+id/num_6"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/_6" />

    <Button
        android:id="@+id/sign_por"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Rojo"
        android:layout_column="3"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:gravity="center"
        android:text="@string/_x" />

    <Button
        android:id="@+id/sing_div"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Rojo"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:text="@string/_div" />

    <Button
        android:id="@+id/num_1"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/_1" />

    <Button
        android:id="@+id/num_2"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/_2" />

    <Button
        android:id="@+id/num_3"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="2"
        android:text="@string/_3" />

    <Button
        android:id="@+id/signo_menos"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Rojo"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:gravity="center"
        android:text="@string/_menos" />

    <Button
        android:id="@+id/punto"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:gravity="center_horizontal"
        android:text="@string/_punto" />

    <Button
        android:id="@+id/num_0"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_column="1"
        android:layout_row="3"
        android:text="0" />

    <Button
        android:id="@+id/sign_igual"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Azul"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:text="=" />

    <Button
        android:id="@+id/sign_mas"
        app:backgroundTint="@null"
        style="@style/AppTheme.BotonCalculadora.Rojo"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:text="+" />
</GridLayout>